# pharmatracker-backend

./: Cargo.toml
dto/: Cargo.toml
dto/src/: apothecary.rs  error.rs  heartbeat.rs  lib.rs  medication.rs  page.rs  reservation.rs  schedule.rs  user.rs
endpoint/: Cargo.toml
endpoint/src/: apothecary.rs  appstate.rs  auth.rs  heartbeat.rs  lib.rs  reservation.rs  user.rs
entity/: Cargo.toml
entity/src/: apothecary.rs  apothecary_medication.rs  apothecary_schedule.rs  apothecary_user.rs  lib.rs  medication.rs  reservation.rs  schedule.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231206_213800_create_table.rs
service/: Cargo.toml
service/src/: apothecary.rs  jwt.rs  lib.rs  page.rs  reservation.rs  user.rs
settings/: Cargo.toml
settings/src/: lib.rs
src/: main.rs
