[package]
name = "pharmatracker_backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "endpoint", "entity", "migration", "service"]

[workspace.dependencies]
anyhow = "1.0.75"
axum = "0.7.1"
sea-orm = { version = "0.12.8", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"

[dependencies]
dotenvy = "0.15.7"
anyhow.workspace = true
endpoint = { path = "endpoint" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
console-subscriber = "0.2.0"

[features]
tracing = ["tokio/tracing"]
