[package]
name = "pharmatracker_backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "dto", "endpoint", "entity", "migration", "settings", "service"]

[workspace.dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
argon2 = { version = "0.5.2", features = ["std"] }
axum = { version = "0.7.1", features = ["macros"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.2.0"
rust_decimal = "1.33.1"
sea-orm = { version = "0.12.8", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
time = { version = "0.3.31", features = ["serde", "serde-human-readable"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.6.1", features = ["v4"] }

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
endpoint = { path = "endpoint" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
console-subscriber = "0.2.0"
regex = "1.10.3"

[features]
tracing = ["tokio/tracing"]
