[package]
name = "dto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
typed-builder = "0.18.0"
uuid.workspace = true
