[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
argon2.workspace = true
entity = { path = "../entity" }
rust_decimal.workspace = true
tokio.workspace = true
uuid.workspace = true

[dependencies.sea-orm-migration]
version = "0.12.0"
features = [
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  "sqlx-postgres",         # `DATABASE_DRIVER` feature
  "sqlx-sqlite"
]
